2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Build environment: Update of Makefiles to include icon.h into source
   package
 * Build environment: Added makefile for Windows (needs to be tested)
 * configure.in: Update of version string
 

2008-07-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin compile with Geany svn r2767.


2008-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update of used plugin API to v71.


2008-06-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin also work together with GTK-2.8. Thanks to Nick for 
   providing patch. 


2008-06-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update of plugin API


2008-05-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Ported build system from spellcheck plugin. Thanks for it.
 * Updated Geany plugin API.
 * Activating of i18n support and adding a first German translation.
 
 
2008-05-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Restart using ChangeLog. 


2007-11-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * geanysendmail.c: Applied a patch from Enrico to improve code;
   Version 0.2b


2007-11-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * geanysendmail.c, TODO: %f added Filename placeholder
   Fixes a few segfaults and momory problems


2007-11-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * geanysendmail.c: Added support configuration dialog called by
   plugin manager and configuration file support to store mailer.
 * TODO: Added list to keep in mind what is still missing


2007-11-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * *: Initial commit